<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work3</string>
    <string name="action_settings">Settings</string>
    <!-- add -->
    <string name="value_0">0</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="period">.</string>
    <string name="equals">=</string>

</resources>
