    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.work2.MainActivity" >

        <TextView  
        android:id="@+id/display"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text=""
        android:singleLine="true"
        android:textSize="40sp"
        android:textColor="#f39800"
        android:gravity="right"
        android:background="#999999"
        />
        <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
            <Button 
            android:id="@+id/button7"
            android:text="@string/value_7" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/button8"
            android:text="@string/value_8" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/button9"
            android:text="@string/value_9" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/buttonClear"
            android:text="@string/clear" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
        </LinearLayout>
        <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
            <Button 
            android:id="@+id/button4"
            android:text="@string/value_4" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/button5"
            android:text="@string/value_5" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/button6"
            android:text="@string/value_6" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/buttonPlus"
            android:text="@string/plus" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
        </LinearLayout>
        <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
            <Button 
            android:id="@+id/button1"
            android:text="@string/value_1" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/button2"
            android:text="@string/value_2" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/button3"
            android:text="@string/value_3" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/buttonMinus"
            android:text="@string/minus" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
        </LinearLayout>    
        <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
        >
            <Button 
            android:id="@+id/button0"
            android:text="@string/value_0" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/buttonTen"
            android:text="@string/period" 
            android:textSize="40sp"
            android:layout_width="72dip" 
            android:layout_height="72dip">
            </Button>
            <Button 
            android:id="@+id/buttonEqual"
            android:text="@string/equals" 
            android:textSize="40sp"
            android:layout_width="144dip" 
            android:layout_height="72dip">
            </Button>
        </LinearLayout>
　　　　</LinearLayout>
